
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================
Librairies:
- Ajout de PHPMailer (https://github.com/PHPMailer/PHPMailer)

Abs2:
- Possibilité d'associer automatiquement des saisies (saisir_groupe.php) à un traitement englobant.

Bulletins:
- Possibilité de définir un autre préfixe que "Bulletin du " précédant le nom de période pour les bulletins.

Cahiers de textes (2):
- Avec l'archivage des CDT de cette version de Gepi, possibilité de coller dans les notices CDT2
  les sélections faites dans les archives CDT (archives de version>=1.6.7)

Publipostage OOo:
- Possibilité de générer (d'un coup) un fichier par classe ou enseignement sélectionné et de zipper l'ensemble.

Alertes:
- Possibilité de définir des équipes pédagogiques plus réduites pour exclure de certaines alertes certaines matières (par exemple les groupes d'aide).

Divers:
- Possibilité de paramétrer classe par classe la dénomination du professeur chargé
  du suivi des élèves d'une classe ("professeur principal" par défaut).

Gepi-1.6.6 (18/01/2015)
===========================
Librairies :
- HTMLPurifier : Mise à jour en 4.6.0

Abs2
- Sélection des traitements sur la classe dans liste_traitements.php et liste_notifications.php
- Possibilité d'inclure l'identité et l'adresse du responsable légal 1 dans les exports ODT/ODS de l'onglet Bilan individuel.

Absences et remplacements de professeurs
- Ajout d'un module de saisie d'absences de professeurs avec possibilité de
  proposer des remplacements aux professeurs qui n'ont pas cours sur un créneau libéré.

Bulletins:
- Vérification de remplissage des bulletins: Possibilité de définir son propre
  modèle de texte pour les mails alertant les professeurs que des appréciations
  ou moyennes sont manquantes.
  Possibilité d'y prendre en compte la date de conseil de classe définie dans
  la page Dates événements classes.