@@ -1,7 +1,28 @@
-		
-<?php echo add_token_field(); ?>
+<?php 
+/*
+ *
+ * Copyright 2015 Bouguin Régis
+ *
+ * This file is part of GEPI.
+ *
+ * GEPI is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * GEPI is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with GEPI; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
 
-<?php $handle=opendir('./bases'); ?>
+echo add_token_field();
+
+$handle=opendir('./bases'); ?>
 
 <select name="csv_file_<?php echo $RNE->id_etablissement; ?>" 
 		id="csv_file"
